Revert "scsi: RAID_ATTRS depends on SCSI"
This reverts commit c45f2f491e3d741fbd9b6fc2a196f97c38db5b82.

Upstream fixed it differently.

--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -1,5 +1,12 @@
 menu "SCSI device support"
 
+config RAID_ATTRS
+	tristate "RAID Transport Class"
+	default n
+	depends on BLOCK
+	---help---
+	  Provides RAID
+
 config SCSI
 	tristate "SCSI device support"
 	depends on BLOCK
@@ -26,13 +33,6 @@ config SCSI
 config SCSI_DMA
 	bool
 	default n
-
-config RAID_ATTRS
-	tristate "RAID Transport Class"
-	default n
-	depends on BLOCK && SCSI
-	---help---
-	  Provides RAID
 
 config SCSI_TGT
 	tristate "SCSI target support"
