... and the same for ipathfs
Signed-off-by: Al Viro <viro@zeniv.linux.org.uk>

--- a/drivers/infiniband/hw/ipath/Makefile
+++ b/drivers/infiniband/hw/ipath/Makefile
@@ -1,7 +1,7 @@
 ccflags-y := -DIPATH_IDSTR='"QLogic kernel.org driver"' \
 	-DIPATH_KERN_TYPE=0
 
-obj-$(CONFIG_INFINIBAND_IPATH) += ib_ipath.o
+obj-$(CONFIG_INFINIBAND_IPATH) += ib_ipath.o ib_ipath_fs.o
 
 ib_ipath-y := \
 	ipath_cq.o \
