zodiac dts: disable LVDS interface
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/arch/arm/boot/dts/imx6q-zii-rdu2.dts
+++ b/arch/arm/boot/dts/imx6q-zii-rdu2.dts
@@ -238,7 +238,7 @@
 		fsl,data-mapping = "spwg";
 		fsl,data-width = <24>;
 		crtc = "ipu2-di0";
-		status = "okay";
+		status = "disabled";
 		primary;
 
 		port@4 {
