rxrpc: rxgk: Implement the Kerberos5 rfc3961 key derivation scheme
Implement an rxgk crypto scheme for Kerberos 5 rfc3961. with the
pseudo-random function, PRF(), from section 5.3 and the key derivation
function, DK() from section 5.1.

Signed-off-by: David Howells <dhowells@redhat.com>

--- a/net/rxrpc/Makefile
+++ b/net/rxrpc/Makefile
@@ -37,4 +37,5 @@ rxrpc-$(CONFIG_RXKAD) += rxkad.o
 rxrpc-$(CONFIG_SYSCTL) += sysctl.o
 
 rxrpc-$(CONFIG_RXGK) += \
-	rxgk_kdf.o
+	rxgk_kdf.o \
+	rxgk_rfc3961.o
