--- a/net/rxrpc/Makefile
+++ b/net/rxrpc/Makefile
@@ -38,4 +38,5 @@ rxrpc-$(CONFIG_SYSCTL) += sysctl.o
 
 rxrpc-$(CONFIG_RXGK) += \
 	rxgk_kdf.o \
-	rxgk_rfc3961.o
+	rxgk_rfc3961.o \
+	rxgk_rfc3962.o
