--- a/net/rxrpc/Kconfig
+++ b/net/rxrpc/Kconfig
@@ -66,6 +66,8 @@ config RXGK
 	select CRYPTO_SKCIPHER
 	select CRYPTO_HASH_INFO
 	select CRYPTO_SHA1
+	select CRYPTO_SHA256
+	select CRYPTO_SHA512
 	select CRYPTO_CBC
 	select CRYPTO_CTS
 	select CRYPTO_AES
