rxrpc: rxgk: Implement crypto self-testing
Implement self-testing infrastructure to test the pseudo-random function,
key derivation, encryption and checksumming.

Signed-off-by: David Howells <dhowells@redhat.com>

--- a/net/rxrpc/Kconfig
+++ b/net/rxrpc/Kconfig
@@ -74,3 +74,7 @@ config RXGK
 	  with add_key().
 
 	  See Documentation/networking/rxrpc.rst.
+
+config RXGK_SELFTESTS
+	bool "RxRPC GSSAPI security selftests"
+	depends on RXGK
