--- a/net/rxrpc/Makefile
+++ b/net/rxrpc/Makefile
@@ -41,4 +41,6 @@ rxrpc-$(CONFIG_RXGK) += \
 	rxgk_app.o \
 	rxgk_kdf.o \
 	rxgk_rfc3961.o \
-	rxgk_rfc3962.o
+	rxgk_rfc3962.o \
+	rxgk_selftest.o \
+	rxgk_test_data.o
