rxrpc: rxgk: Implement the Camellia enctypes from rfc6803
Implement the camellia128-cts-cmac and camellia256-cts-cmac enctypes from
rfc6803 for RxGK.

Note that the test vectors in rfc6803 for encryption are incomplete,
lacking the key usage number needed to derive Ke and Ki, and there are
errata for this:

	https://www.rfc-editor.org/errata_search.php?rfc=6803

Signed-off-by: David Howells <dhowells@redhat.com>

--- a/net/rxrpc/Makefile
+++ b/net/rxrpc/Makefile
@@ -42,6 +42,7 @@ rxrpc-$(CONFIG_RXGK) += \
 	rxgk_kdf.o \
 	rxgk_rfc3961.o \
 	rxgk_rfc3962.o \
+	rxgk_rfc6803.o \
 	rxgk_rfc8009.o \
 	rxgk_selftest.o \
 	rxgk_test_data.o
