drivers/perf: arm_dsu_pmu: Convert to use uncore PMU helpers
Cc: Will Deacon <will@kernel.org>
Cc: Mark Rutland <mark.rutland@arm.com>
Cc: linux-arm-kernel@lists.infradead.org
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/drivers/perf/Kconfig
+++ b/drivers/perf/Kconfig
@@ -79,6 +79,7 @@ config ARM_SMMU_V3_PMU
 config ARM_DSU_PMU
 	tristate "ARM DynamIQ Shared Unit (DSU) PMU"
 	depends on ARM64
+	select UNCORE_PMU
 	  help
 	  Provides support for performance monitor unit in ARM DynamIQ Shared
 	  Unit (DSU). The DSU integrates one or more cores with an L3 memory
