--- a/drivers/perf/Kconfig
+++ b/drivers/perf/Kconfig
@@ -88,6 +88,7 @@ config ARM_DSU_PMU
 config FSL_IMX8_DDR_PMU
 	tristate "Freescale i.MX8 DDR perf monitor"
 	depends on ARCH_MXC || COMPILE_TEST
+	select UNCORE_PMU
 	  help
 	  Provides support for the DDR performance monitor in i.MX8, which
 	  can give information about memory throughput and other related
