drivers/perf: arm-ccn: Convert to use uncore PMU helpers
Cc: Will Deacon <will@kernel.org>
Cc: Mark Rutland <mark.rutland@arm.com>
Cc: linux-arm-kernel@lists.infradead.org
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/drivers/perf/Kconfig
+++ b/drivers/perf/Kconfig
@@ -44,6 +44,7 @@ config ARM_CCI5xx_PMU
 config ARM_CCN
 	tristate "ARM CCN driver support"
 	depends on ARM || ARM64 || COMPILE_TEST
+	select UNCORE_PMU
 	help
 	  PMU (perf) driver supporting the ARM CCN (Cache Coherent Network)
 	  interconnect.
