drivers/perf: Add common uncore PMU helpers
The uncore PMU drivers all have similar code to handle event init, CPU
hotplug events, and cpumask sysfs attribute. Refactor this code into a
common library for drivers to use.

Cc: Will Deacon <will@kernel.org>
Cc: Mark Rutland <mark.rutland@arm.com>
Cc: linux-arm-kernel@lists.infradead.org
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/drivers/perf/Kconfig
+++ b/drivers/perf/Kconfig
@@ -6,6 +6,13 @@
 menu "Performance monitor support"
 	depends on PERF_EVENTS
 
+config UNCORE_PMU
+	bool "Uncore PMU framework" if COMPILE_TEST
+	help
+	  Say y if you want to use CPU performance monitors on ARM-based
+	  systems.
+
+
 config ARM_CCI_PMU
 	tristate "ARM CCI PMU driver"
 	depends on (ARM && CPU_V7) || ARM64
