drivers/perf: hisilicon: Convert to use uncore PMU helpers
As we know all the CPU's MPIDR values even when offline, there's no
reason to check the CPU association in a hotplug handler. This is moved
to probe time. It does assume all the CPU models are the same.

Cc: Shaokun Zhang <zhangshaokun@hisilicon.com>
Cc: Will Deacon <will@kernel.org>
Cc: Mark Rutland <mark.rutland@arm.com>
Cc: linux-arm-kernel@lists.infradead.org
Signed-off-by: Rob Herring <robh@kernel.org>

--- a/drivers/perf/hisilicon/Kconfig
+++ b/drivers/perf/hisilicon/Kconfig
@@ -2,6 +2,7 @@
 config HISI_PMU
 	tristate "HiSilicon SoC PMU drivers"
 	depends on ARM64 && ACPI
+	select UNCORE_PMU
 	  help
 	  Support for HiSilicon SoC L3 Cache performance monitor, Hydra Home
 	  Agent performance monitor and DDR Controller performance monitor.
