netfs: Add a function unlock a range of folios
Add a function to iterate over a range of folios unlocking them.

Signed-off-by: David Howells <dhowells@redhat.com>

--- a/fs/netfs/Makefile
+++ b/fs/netfs/Makefile
@@ -5,7 +5,8 @@ netfs-y := \
 	objects.o \
 	read_helper.o \
 	write_back.o \
-	write_helper.o
+	write_helper.o \
+	xa_iterator.o
 # dio_helper.o
 
 netfs-$(CONFIG_NETFS_STATS) += stats.o
