--- a/.github/workflows/powerpc-clang.yml
+++ b/.github/workflows/powerpc-clang.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        defconfig: [ppc64, corenet64_smp, pmac32, ppc40x, ppc44x, mpc885_ads, corenet32_smp]
+        defconfig: [ppc64, corenet64_smp, pmac32, ppc40x, ppc44x, mpc885_ads]
         image: [ubuntu-21.04]
         subarch: [ppc64]
         include:
